--- a/Micro-ibm-bulepage/pom.xml
+++ b/Micro-ibm-bulepage/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mirco</groupId>
+	<groupId>com.micro</groupId>
 	<artifactId>Micro-ibm-bulepage</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
-	<name>Mirco-ibm-bulepage</name>
+	<name>Micro-ibm-bulepage</name>
 	<description>Project for Spring Boot</description>
 
 	<parent>
